# sabbaticas-cli

./: LICENSE  README.md  pyproject.toml
src/: sabbaticas_cli.py
